[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localchat"
dynamic = ["version"]
description = "a local chat agent."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Takuro Sakai", email = "taqu2920.dev@gmail.com"},
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "python-dotenv>=1.0.1",
    "langchain>=0.1.4",
    "langchain-community>=0.0.16",
    "langchain_openai>=0.0.5",
    "streamlit>=1.30.0",
    "openai>=1.10.0",
    "transformers>=4.30.0",
    "google-api-python-client>=2.100.0",
    "sentence-transformers",
    "bs4",
    "html2text",
    "pypdf2",
    "chromadb>=0.4.24",
]
[tool.setuptools.packages.find]
exclude = ['chroma_doc', 'chroma_web', 'models', 'env']
[project.optional-dependencies]

